[metadata]
name = systemic_risk
version = 0.0.5
author = Flynn Chen
author_email = flynn.chen@yale.edu
description = A package for calculating systemic risk in the market
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gophronesis/systemic_risk
project_urls =
    Bug Tracker = https://github.com/gophronesis/systemic_risk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src